--- a/index.html
+++ b/index.html
@@ -98,128 +98,115 @@
                     </div>
                 </sl-button>
             </div>
-            <div style="display: flex; align-items: center; height: 80vh;">
-                <div class="contentContainer">
-                    <div id="factsSlide1"
-                        style="position:absolute; padding: 5% 0; margin: auto 10vw auto 10vw; height: 80vh;">
-                        <div class="leftContainer" style="min-height:10%;">
-                            <div class="dementiaFact" id="fact1"
-                                style="margin: 0 0 0 0; display: flex; justify-content: center; align-items: center;">
-                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
-                                    alt="Forget me not flower" />
-                                <div style="margin-left: 1%; text-align: center;">Dementia is not one specific disease
-                                </div>
-                            </div>
-                            <div class="dementiaFact" id="fact2"
-                                style="margin: 1vh 0 0 0; display: flex; justify-content: center; align-items: center;">
-                                - it is a collection of symptoms caused by disorders which affect the brain
+            <!-- <div style="display: flex; align-items: center; height: 90vh;"> -->
+            <div class="contentContainer">
+                <div id="factsSlide1" style="position:absolute; padding: 0 0; margin: 10vh 0 0 0; height: 90vh;">
+                    <div class="leftContainer" style="min-height:10%;">
+                        <div class="dementiaFact" id="fact1"
+                            style="margin: 0 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div style="margin-left: 1%; text-align: center;">Dementia is not one specific disease
                             </div>
                         </div>
-                        <div class="rightContainer" style="min-height:10%;">
-                            <div class="dementiaFact" id="fact3"
-                                style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
-                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
-                                    alt="Forget me not flower" />
-                                <div style="margin-left: 1%; text-align: center;">Dementia affects thinking, behaviour
-                                    and ability to perform everyday tasks</div>
-                            </div>
+                        <div class="dementiaFact" id="fact2"
+                            style="margin: 1vh 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            - it is a collection of symptoms caused by disorders which affect the brain
                         </div>
-                        <div class="leftContainer" style="min-height:10%;">
-                            <div class="dementiaFact" id="fact4"
-                                style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
-                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
-                                    alt="Forget me not flower" />
-                                <div style="margin-left: 1%; text-align: center;">It is not a normal part of ageing
-                                    process
-                                </div>
-                            </div>
+                    </div>
+                    <div class="rightContainer" style="min-height:10%;">
+                        <div class="dementiaFact" id="fact3"
+                            style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div style="margin-left: 1%; text-align: center;">Dementia affects thinking, behaviour
+                                and ability to perform everyday tasks</div>
                         </div>
-                        <div class="rightContainer" style="min-height:10%;">
-                            <div class="dementiaFact" id="fact5"
-                                style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
-                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
-                                    alt="Forget me not flower" />
-                                <div style="margin-left: 1%; text-align: center;">Brain function affected enough to
-                                    interfere with normal social and working life
-                                </div>
-                            </div>
-                        </div>
-                        <div class="leftContainer" style="min-height:10%;">
-                            <div class="dementiaFact" id="fact6"
-                                style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
-                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
-                                    alt="Forget me not flower" />
-                                <div style="margin-left: 1%; text-align: center;">Loss of cognitive function and
-                                    functional independence beyond the level expected for normal ageing</div>
-                            </div>
-                        </div>
-                        <div class="rightContainer" style="min-height:10%;">
-                            <div class="dementiaFact" id="fact7"
-                                style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
-                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
-                                    alt="Forget me not flower" />
-                                <div style="margin-left: 1%; text-align: center;">A permanent and progressive disease
-                                    which affects an individuals’ ability to perform every day activities and care for
-                                    themselves
-                                </div>
+                    </div>
+                    <div class="leftContainer" style="min-height:10%;">
+                        <div class="dementiaFact" id="fact4"
+                            style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div style="margin-left: 1%; text-align: center;">It is not a normal part of ageing
+                                process
                             </div>
                         </div>
                     </div>
-                    <div id="factsSlide2"
-                        style="position:relative; padding: 5% 0; margin: auto 10vw auto 10vw; height: 80vh;">
-                        <div class="leftContainer" style="min-height:10%;">
-                            <div class="dementiaFact" id="fact8"
-                                style="margin: 0 0 0 0; display: flex; justify-content: center; align-items: center;">
-                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
-                                    alt="Forget me not flower" />
-                                <div style="margin-left: 1%; text-align: center;">Impaired cognitive function often
-                                    accompanied by deterioration in emotional control, social behaviour and motivation
-                                </div>
+                    <div class="rightContainer" style="min-height:10%;">
+                        <div class="dementiaFact" id="fact5"
+                            style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div style="margin-left: 1%; text-align: center;">Brain function affected enough to
+                                interfere with normal social and working life
                             </div>
                         </div>
-                        <div class="rightContainer" style="min-height:10%;">
-                            <div class="dementiaFact" id="fact9"
-                                style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
-                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
-                                    alt="Forget me not flower" />
-                                <div style="margin-left: 1%; text-align: center;">Appreciable disturbance to higher
-                                    cortical functions such as:
-                                </div>
-                            </div>
-                            <div class="dementiaFact" id="fact10" style="margin: 1% 0 0 0; text-align: center;">
-                                complex attention, executive function, learning and memory, language, and
-                                perceptual-motor or social cognition</div>
+                    </div>
+                    <div class="leftContainer" style="min-height:10%;">
+                        <div class="dementiaFact" id="fact6"
+                            style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div style="margin-left: 1%; text-align: center;">Loss of cognitive function and
+                                functional independence beyond the level expected for normal ageing</div>
                         </div>
-                        <div class="leftContainer" style="min-height:10%;">
-                            <div class="dementiaFact" id="fact11"
-                                style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
-                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
-                                    alt="Forget me not flower" />
-                                <div style="margin-left: 1%; text-align: center;">As dementia illness progresses, the
-                                    person may develop behaviours that may seem unusual/out of character</div>
-                            </div>
-                        </div>
-                        <div class="rightContainer" style="min-height:10%;">
-                            <div class="dementiaFact" id="fact12"
-                                style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
-                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
-                                    alt="Forget me not flower" />
-                                <div style="margin-left: 1%;" text-align: center;>There are 120 different causes of
-                                    dementia
-                                </div>
-                            </div>
-                        </div>
-                        <div class="leftContainer" style="min-height:10%;">
-                            <div class="dementiaFact" id="fact13"
-                                style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
-                                <img class="flower bulletFlower" src="./images/FMN_flower.svg"
-                                    alt="Forget me not flower" />
-                                <div style="margin-left: 1%; text-align: center;">There are 4 common types:</div>
+                    </div>
+                    <div class="rightContainer" style="min-height:10%;">
+                        <div class="dementiaFact" id="fact7"
+                            style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div style="margin-left: 1%; text-align: center;">A permanent and progressive disease
+                                which affects an individuals’ ability to perform every day activities and care for
+                                themselves
                             </div>
                         </div>
                     </div>
                 </div>
+                <div id="factsSlide2" style="position:absolute; padding: 0 0; margin: 15vh 0 0 0; height: 90vh;">
+                    <div class="leftContainer" style="min-height:10%;">
+                        <div class="dementiaFact" id="fact8"
+                            style="margin: 0 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div style="margin-left: 1%; text-align: center;">Impaired cognitive function often
+                                accompanied by deterioration in emotional control, social behaviour and motivation
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rightContainer" style="min-height:10%;">
+                        <div class="dementiaFact" id="fact9"
+                            style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div style="margin-left: 1%; text-align: center;">Appreciable disturbance to higher
+                                cortical functions such as:
+                            </div>
+                        </div>
+                        <div class="dementiaFact" id="fact10" style="margin: 1% 0 0 0; text-align: center;">
+                            complex attention, executive function, learning and memory, language, and
+                            perceptual-motor or social cognition</div>
+                    </div>
+                    <div class="leftContainer" style="min-height:10%;">
+                        <div class="dementiaFact" id="fact11"
+                            style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div style="margin-left: 1%; text-align: center;">As dementia illness progresses, the
+                                person may develop behaviours that may seem unusual/out of character</div>
+                        </div>
+                    </div>
+                    <div class="rightContainer" style="min-height:10%;">
+                        <div class="dementiaFact" id="fact12"
+                            style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div style="margin-left: 1%;" text-align: center;>There are 120 different causes of
+                                dementia
+                            </div>
+                        </div>
+                    </div>
+                    <div class="leftContainer" style="min-height:10%;">
+                        <div class="dementiaFact" id="fact13"
+                            style="margin: 5vh 0 0 0; display: flex; justify-content: center; align-items: center;">
+                            <img class="flower bulletFlower" src="./images/FMN_flower.svg" alt="Forget me not flower" />
+                            <div style="margin-left: 1%; text-align: center;">There are 4 common types:</div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <!-- </div> -->
             <!-- <div id="placeholder1" ></div> -->
             <!-- <div id="placeholder1"
                 style="position:relative; transform:translate(-50%, -50%); width: 100px; height: 100px; background-color: blue;">
@@ -245,7 +232,6 @@
                 </div>
             </div>
             <div class="contentSectionBG">
-                <!-- scroll trigger pinning breaks this opacity...?  -->
                 <svg class="backgroundImage" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100px" height="7.775px"
                     viewBox="0 -0.001 100 7.775" enable-background="new 0 -0.001 100 7.775" xml:space="preserve">
@@ -763,9 +749,10 @@
                 <img class="thumbnailImage"
                     style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"
                     src="./images/FMN_flower.svg" alt="Forget me not flower" />
-                <div style="position: absolute; top: 110%; left: 50%; transform: translate(-50%, -50%);"><small>TOP</small>
+                <div style="position: absolute; top: 110%; left: 50%; transform: translate(-50%, -50%);">
+                    <small>TOP</small>
                 </div>
-                </sl-button>
+            </sl-button>
         </div>
         <sl-dialog id=" galleryImage1 " class=" dialog-overview cardThumbnailImage" no-header="true ">
             <img src="images/Alzheimers_pathology.png " alt="img1? " class="galleryCardImage "
