Push to work on desktop...

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
             <div class="contentContainer"
                 style="height:80%; width: 80%; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display:flex; align-items:center">
                 <div id="brainContentSectionImageContainer">
+                    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"class="commonTypesText">4 COMMON TYPES</div>
                     <div class="actionFacts" id="commonType1">TYPE 1</div>
                     <div class="actionFacts" id="commonType2">TYPE 2</div>
                     <div class="actionFacts" id="commonType3">TYPE 3</div>
